--- a/jmercury.server/pom.xml
+++ b/jmercury.server/pom.xml
@@ -54,15 +54,14 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>dblib</artifactId>
-            <version>1.0</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>org.scream3r</groupId>
             <artifactId>jssc</artifactId>
             <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dblib</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
