--- a/jmercury.client/pom.xml
+++ b/jmercury.client/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>calendarlib</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
